styles.css
*{ 
  box-sizing: border-box;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
} 

ul,li{ 
 list-style-type: none;
} 

.container{ 
  display: grid; 
  grid-template-columns: 0.5fr 3fr;  
  grid-template-rows: 0.5fr 4fr;
}

.left-sidebar{ 
  grid-column: 1; 
  grid-row: 1 / -1;   
  display: grid;   
  grid-template-columns: 1fr;
  grid-template-rows: repeat(10,50px);
  justify-items: flex-start;  
  gap: 1em; 
  background-color: #113a3f; 
  font-weight: bold;  
  padding: 1.5em 0 0 1.5em ;
}  

.side-content{ 
  color: #b1764d; 
  font-size: 1em; 
  display: flex;  
  gap: 0.5em; 
  align-items: center;
 
}

.header{ 
  grid-column: 2; 
  grid-row: 1; 
  background-color:#b1764d;
}

.article{ 
  grid-column: 2 / -1; 
  display: grid; 
  grid-template-columns: 2fr 1fr; 
  background-color: whitesmoke; 
  grid-template-rows: 1fr 0.1fr;
} 

.right-sidebar{ 
  padding: 2em 1em 0 1em; 
  display: grid; 
  grid-template-rows: 60px 0.2fr 60px 0.2fr;
  gap: 1.5em; 
} 

.middle-text{ 
  display: grid; 
  overflow: auto;
  grid-template-rows: 60px repeat(3,0.5fr); 
  grid-template-columns: repeat(auto-fit,minmax(350px,0.85fr)); 
  padding: 2em 1em 0 1em;   
  gap: 1.5em; 
}   

#heading{ 
  grid-column: 1/-1; 
  font-size: 1.5em;
  font-weight: bold;  
  grid-row: 1;
}  

.dashboard{ 
  text-align: center;  
  align-self: center;
  display: flex; 
  align-items: center; 
  gap: 1em; 
  font-size: 1.5em;
}



.account-settings{ 
  text-align: center; 
  align-self: center; 
  height: 7em; 
  display: grid;
  gap: 1em; 
  /* margin-top: ; */
}  

.top-right{ 
  display: grid; 
  grid-template-rows: 0.5fr; 
  grid-template-columns: 0.8fr 0.5fr;
} 

form{  
  display: flex;
  align-items: center; 
  justify-content: flex-start; 
  padding: 1em 0 0 1em;
} 

input{ 
  display: flex; 
  flex: auto;
  margin-left: 2em; 
  height: 2.5em; 
  border-radius: 25px; 
  background-color: whitesmoke; 
  border: none;
}

.top-right > p{ 
  justify-self: center;
}

.last-level{ 
  display: grid; 
  grid-template-columns: 1fr 0.5fr; 
} 

span{ 
  font-weight: bold; 
  font-size: 1.5em;
} 

.buttons{  
  grid-column: 2;
  display: flex;    
  flex: auto;
  gap: 1em;   
  margin-right: 1em;
  flex-wrap: wrap;
} 

button{ 
  font-size: 1em; 
  height: 3em; 
  border-radius: 25px; 
  border: none;
  align-self: center; 
  background-color: #113a3f; 
  font-weight: bold; 
  color: white;  
  flex: auto;
} 

.card{   
  border-radius: 20px;
  text-align:left; 
  padding: 1.5em;   
  font-size: 1.1em; 
  color:  #113a3f; 
  box-shadow: 2px 2px 3px 2px #ccd1d8 ; 
  display: flex; 
  flex-direction: column;

} 

.announcements{ 
  border-radius: 20px;  
  font-size: 1.2em; 
  padding: 1em; 
  color:#113a3f;  
  box-shadow: 2px 2px 3px 2px #ccd1d8 ;

}
 
hr{ 
  border: none;
  height: 2px;
  margin: 10px 0; 
  background-color:#b1764d;
}

#last-heading{ 
  grid-column: 1 / -1; 
  font-size: 1.5em; 
  font-weight: bold;
} 

.trending{ 
  border-radius: 20px; 
  background-color: whitesmoke; 
  box-shadow: 2px 2px 3px 2px #ccd1d8 ;
} 

svg{ 
  fill: #b1764d; 
  height: 2em;
} 

form > svg{ 
  fill:whitesmoke;
}

.user-profile { 
  color: black; 
  padding:1em 0 0 1em; 
  font-size: 1.2em; 
  display: flex; 
  align-items: center;
} 

.name{ 
  font-size: 2em; 
  align-self: center; 
} 

.jayce-svg{ 
  width: 100px;
  height: 100px;
  border-radius: 50%;
  border: solid black;
}  

p > svg{ 
  fill: black;
} 

p > img{ 
  width: 70px;
  height: 70px; 
  border: solid black; 
  border-radius: 50%;
}

.top-right > p{ 
  display: flex;
  align-items: center; 
  gap: 1em;
  font-size: 1.2em; 
  font-weight: bold;  
  justify-self: flex-end; 
  margin-right: 1em;
}

li > img{ 
  width: 75px;
  height: 75px; 
  border-radius: 50%; 
} 

li{ 
  display: flex;
  gap: 1em;
} 

.card-icons{ 
  height: 100%; 
  display: flex;
  justify-content: flex-end; 
  align-items: flex-end;
}

